backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgementor-backend
  namespace: forgementor
spec:
  selector:
    app: forgementor-backend

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

  type: ClusterIP
